--- a/nodecat/package.json
+++ b/nodecat/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodebird-api",
+  "name": "nodecat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,22 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
-    "mysql2": "^3.5.2",
-    "nunjucks": "^3.2.4",
-    "passport": "^0.6.0",
-    "passport-kakao": "^1.0.1",
-    "passport-local": "^1.0.0",
-    "sequelize": "^6.32.1",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "nunjucks": "^3.2.4"
   }
 }
